--- a/deploy/UpdateSite3/changelog.txt
+++ b/deploy/UpdateSite3/changelog.txt
@@ -7,6 +7,12 @@ https://github.com/tthuem/FeatureIDE/issues/milestones
 
 Here, is a list of high-level enhancements.
 
+Release 3.4.1 (October 2017)
+* Hotfix containing only stability improvements over v3.3.0
+* Removed dependency from feature modeling to FeatureIDE
+* Numerous fixes with respect to new configuration format
+* Improvements for feature-model editor, configuration editor, explanations, and product generation
+
 Release 3.4.0 (September 2017)
 * All feature diagram anomalies can be explained now (based on SAT4J's minimal unsatisfiable subset computation) 
 * Visual explanations for feature diagrams improved
