--- a/deploy/UpdateSite3/changelog.txt
+++ b/deploy/UpdateSite3/changelog.txt
@@ -7,6 +7,12 @@ https://github.com/tthuem/FeatureIDE/issues/milestones
 
 Here, is a list of high-level enhancements.
 
+Release 3.4.2 (December 2017)
+* Hotfix containing only stability improvements over v3.4.1
+* Feature models created with v3.3.0 and v3.3.1 are correctly loaded (some or-groups were automatically transformed into mandatory features)
+* Fixed problems: missing markers for invalid configurations, opening multiple configurations in project explorer
+* Usability of feature diagram improved
+
 Release 3.4.1 (October 2017)
 * Hotfix containing only stability improvements over v3.4.0
 * Removed dependency from feature modeling to FeatureIDE
