--- a/deploy/UpdateSite3/changelog.txt
+++ b/deploy/UpdateSite3/changelog.txt
@@ -7,6 +7,19 @@ https://github.com/FeatureIDE/FeatureIDE/milestones
 
 Here, is a list of high-level enhancements.
 
+Release 3.6.1 (October 2019)
+* Hotfix containing only stability improvements over v3.6.0
+* Configuration editor required minutes after every click (#907)
+* Random configurations differ in each run now (before the same seed has been used, see #915)
+* Missing default configuration caused numerous problems (#911)
+* Feature attributes can be updated again (#903)
+* Wrong explanations for feature-model defects fixed (#905, #906, #897)
+* Problems when importing feature models fixed (#793)
+* Incompatibilities with Eclipse 2019-X fixed (#901)
+* Feature-model slicing fixed (#900)
+* Usability of feature attributes view improved (#862)
+* Support for colors in attributes view (#857)
+
 ## Release 3.6.0 (August 2019) 
 * Increased required Java version to 1.8
 * New constraint view added listing cross-tree constraints
@@ -51,6 +64,11 @@ Here, is a list of high-level enhancements.
   * DIMACS format (#764, #868, #869)
   * GUIDSL format (#871)
   * Extended feature model format (feature model attributes) (#855, #876)
+* Critical and major bugs _introduced_ with this version
+  * Feature attributes cannot be updated (#903)
+  * Configuration editor requires minutes after every click (#907)
+  * Wrong explanations for feature-model defects (#905, #906)
+  * No default configuration selected when loading FeatureIDE example (#911)
 
 Release 3.5.5 (June 2019)
 * Hotfix containing only stability improvements over v3.5.4
