--- a/deploy/UpdateSite3/changelog.txt
+++ b/deploy/UpdateSite3/changelog.txt
@@ -7,10 +7,18 @@ https://github.com/FeatureIDE/FeatureIDE/milestones
 
 Here, is a list of high-level enhancements.
 
+Release 3.7.1 (June 2021)
+* Hotfix containing only stability improvements over v3.7.0
+* Significant speed-ups when opening and working with large feature models (#1093)
+* Minor fixes to the FeatureIDE library (#1111, #1100, thanks for the reports by Paul Maximilian Bittner and Kevin Feichtinger)
+* Fixed problem when opening the Java editor for AHEAD projects (#1048, #1085, thanks for the reports by MrKSP and Sebastian Böhm)
+* Contributions by Tobias Heß and Sebastian Krieter 
+
 Release 3.7.0 (October 2020)
 * Universal Variability Language (UVL) integrated into FeatureIDE (#1050)
 * New operation to derive subset product lines given a partial configuration (#1079)
 * Significantly revised constraints view with improved performance, sorting (#874, #886, #887, #1014, #1037, #1038, #1039, #1060, #1063, #1064, #1068)
+* Constraint view is updated upon deletion of constraints (#1070, thanks for the report by cpwnd)
 * Removal of features that occur in cross-tree constraints by means of slicing (#200, #984)
 * Subtrees of feature models can be collapsed to a specified level (#851, thanks for the report by cpwnd)
 * Stability of feature-model editor (#992, #1028, #1083) and sampling with YASA (#967) improved
