--- a/deploy/UpdateSite3/changelog.txt
+++ b/deploy/UpdateSite3/changelog.txt
@@ -7,6 +7,10 @@ https://github.com/FeatureIDE/FeatureIDE/milestones
 
 Here, is a list of high-level enhancements.
 
+Release 3.7.3 (November 2021)
+* Hotfix containing only bugfixes over v3.7.2
+* Fixed a breaking bug that resulted in a faulty CNF in some cases (#1263)
+
 Release 3.7.2 (July 2021)
 * Hotfix containing only bugfixes and code quality improvements over v3.7.1
 * Cleaned up outdated libraries in fm.core plug-in (#1144)
@@ -22,8 +26,8 @@ Release 3.7.1 (June 2021)
 * Hotfix containing only stability improvements over v3.7.0
 * Significant speed-ups when opening and working with large feature models (#1093)
 * Minor fixes to the FeatureIDE library (#1111, #1100, thanks for the reports by Paul Maximilian Bittner and Kevin Feichtinger)
-* Fixed problem when opening the Java editor for AHEAD projects (#1048, #1085, thanks for the reports by MrKSP and Sebastian Böhm)
-* Contributions by Tobias Heß and Sebastian Krieter 
+* Fixed problem when opening the Java editor for AHEAD projects (#1048, #1085, thanks for the reports by MrKSP and Sebastian Bï¿½hm)
+* Contributions by Tobias Heï¿½ and Sebastian Krieter 
 
 Release 3.7.0 (October 2020)
 * Universal Variability Language (UVL) integrated into FeatureIDE (#1050)
@@ -33,7 +37,7 @@ Release 3.7.0 (October 2020)
 * Removal of features that occur in cross-tree constraints by means of slicing (#200, #984)
 * Subtrees of feature models can be collapsed to a specified level (#851, thanks for the report by cpwnd)
 * Stability of feature-model editor (#992, #1028, #1083) and sampling with YASA (#967) improved
-* API improved (#917, thanks for the report by Robert Müller)
+* API improved (#917, thanks for the report by Robert Mï¿½ller)
 
 Release 3.6.4 (September 2020)
 * Hotfix containing only stability improvements over v3.6.3
