--- a/deploy/UpdateSite3/changelog.txt
+++ b/deploy/UpdateSite3/changelog.txt
@@ -12,14 +12,12 @@ Release 3.8.1 (November 2021)
 * Fixed a breaking bug that resulted in a faulty CNF in some cases (#1263)
   * This bug was introduced in v3.7.0 and might affect analyses and evaluations that were performed with version v3.7.0, v3.7.1, v3.7.2, or v3.8.0
 * UVL models now support spaces (#1143)
-* Composed UVL model now live updates after changes to submodels (#1134)
-* GUI support for handling imported submodels with UVL (#1250)
-* Many other enhancements and fixes for UVL (#1159, #1210, #1175, #1196, #1194, #1174, #1180)
-* Many minor fixes related to redo/undo (#1235, #1207, #1197)
-* Many minor fixes related to editing feature models (#1214, #1151, #1255, #1005, #1241, #1225, #1200, #1153, #1181, #1195)
+* Many other enhancements and fixes for UVL (#1159, #1210, #1175, #1196, #1194, #1174, #1180, #1298)
+* Many minor fixes related to redo/undo (#1235, #1207, #1197, #1201, #1150)
+* Many minor fixes related to editing feature models (#1214, #1151, #1255, #1005, #1241, #1225, #1200, #1153, #1181, #1195, #1234, #1245, #1315, #1221)
 * Expansion mode is now correctly saved in the configuration editor (#1012)
-* Several improvements for the constraint view (#1277,#1256)
-* More intuitive messages in the configuration map (#1178)
+* Several improvements for the constraint view (#1277, #1256)
+* Improvement of the configuration map (#1178, #1253)
 
 Release 3.8.0 (August 2021)
 * Many enhancements for UVL
