Fixes indentation of latex export and tests

--- a/tests/de.ovgu.featureide.fm.ui-test/src/testLatexFiles/FeatureDiagramTest/TikzExample.tex
+++ b/tests/de.ovgu.featureide.fm.ui-test/src/testLatexFiles/FeatureDiagramTest/TikzExample.tex
@@ -19,4 +19,6 @@
 			\draw[drawColor] (0,-0.2) arc (240:300:0.2);
 		\node [alternative,label=right:Alternative Group] {}; \\		\node [hiddenNodes,label=center:1,label=right:Collapsed Nodes] {}; \\
 	};
+	\matrix [below=1mm of current bounding box] {
+	};
 \end{forest}
